# ceqrobot

./: .gitignore  LICENSE  README  ceqrobot.cabal  env.source  exportjson  schema.sql  scraper  stack.yaml
CeqRobot/: Control.hs  Course.hs  Database.hs  Export.hs  Model.hs  ScrapeCourse.hs  Scraper.hs  Util.hs
Hack/: diploma.mzn  prepdata.rb
Main/: ExportJsonMain.hs  Main.hs  ScraperMain.hs
SudoSatirical/: Article.hs  Control.hs  Database.hs  Reddit.hs  Scraper.hs
Test/: TestMain.hs  ceq-example-long.html  ceq-example-short.html  courses-example-mandatory.html
Web/: package-lock.json
Web/src/: CourseRow.js  CourseTable.js  app.js
Web/static/: fonts.css
web/: package-lock.json  package.json  webpack.config.js
web/src/: CeqRowFragment.js  CourseControls.js  CourseHeader.js  CourseRow.js  CourseTable.js  Main.js  TableControls.js
web/static/: Inconsolata-Bold.eot  index.html  style.css
