name:                ceqrobot
version:             0.1.0
license:             AllRightsReserved
author:              Johan Förberg
maintainer:          johan@forberg.se
build-type:          Simple
cabal-version:       >=1.10

executable ceqrobot
  main-is:             Main.hs

  build-depends:       base >=4.9 && <4.10
                     , ceqrobot == 0.1.0
--                   , directory >=1.2 && <1.3

  default-language:    Haskell2010

  hs-source-dirs:      Main

library
  exposed-modules:     CeqRobot.Model
                     , CeqRobot.Scraper
                     , CeqRobot.Database

  build-depends:       base >=4.9 && <4.10
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5.10 && <0.6
                     , http-conduit >=2.2 && <2.3
                     , postgresql-typed >=0.5 && <0.6
                     , scalpel >=0.5 && <0.6
                     , tagsoup >=0.14 && <0.15
                     , text >=1.2 && <1.3

  default-language:    Haskell2010
