name:                ceqrobot
version:             0.1.0
license:             AllRightsReserved
author:              Johan Förberg
maintainer:          johan@forberg.se
build-type:          Simple
cabal-version:       >=1.10

executable scraper
  main-is:             ScraperMain.hs
  hs-source-dirs:      Main
  ghc-options:         -Wall
  default-language:    Haskell2010

  build-depends:       base >=4.10 && <4.11
                     , ceqrobot == 0.1.0

executable exportjson
  main-is:             ExportJsonMain.hs
  hs-source-dirs:      Main
  ghc-options:         -Wall
  default-language:    Haskell2010

  build-depends:       base >=4.10 && <4.11
                     , bytestring >=0.10 && <0.11
                     , ceqrobot == 0.1.0

library
  ghc-options:         -Wall -Wno-orphans
  default-language:    Haskell2010

  exposed-modules:     CeqRobot.Control
                     , CeqRobot.Database
                     , CeqRobot.Export
                     , CeqRobot.Model
                     , CeqRobot.Scraper
                     , CeqRobot.Util

  build-depends:       aeson >=1.2 && <1.3
                     , base >=4.10 && <4.11
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5.10 && <0.6
                     , http-client >=0.5 && <0.6
                     , http-conduit >=2.3 && <2.4
                     , postgresql-typed >=0.5.2 && <0.6
                     , regex >=1.0 && <1.1
                     , scalpel >=0.5 && <0.6
                     , tagsoup >=0.14 && <0.15
                     , text >=1.2 && <1.3
                     , text-format >=0.3 && <0.4
                     , tuple >=0.3 && <0.4
