name:                ceqrobot
version:             0.1.0
license:             AllRightsReserved
author:              Johan Förberg
maintainer:          johan@forberg.se
build-type:          Simple
cabal-version:       >=1.10

executable scraper
  main-is:             ScraperMain.hs
  hs-source-dirs:      Main
  ghc-options:         -Wall
  default-language:    Haskell2010

  build-depends:       base >=4.10
                     , ceqrobot

executable exportjson
  main-is:             ExportJsonMain.hs
  hs-source-dirs:      Main
  ghc-options:         -Wall
  default-language:    Haskell2010

  build-depends:       base >=4.10
                     , bytestring >=0.10
                     , ceqrobot

library
  ghc-options:         -Wall -Wno-orphans
  default-language:    Haskell2010

  exposed-modules:     CeqRobot.Control
                     , CeqRobot.Database
                     , CeqRobot.Export
                     , CeqRobot.Model
                     , CeqRobot.Scraper
                     , CeqRobot.Util

  build-depends:       aeson >=1.2
                     , base >=4.10
                     , bytestring >=0.10
                     , containers >=0.5.10
                     , http-client >=0.5
                     , http-conduit >=2.3
                     , postgresql-typed >=0.5.2
                     , regex >=1.0
                     , scalpel >=0.5
                     , tagsoup >=0.14
                     , text >=1.2
                     , text-format >=0.3
                     , tuple >=0.3

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Test
  main-is:             TestMain.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.10
                     , ceqrobot
                     , file-embed <0.1
                     , hspec >=2.4
                     , tagsoup >=0.14
                     , text >=1.2
